--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,5 +1,7 @@
 .about-page header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../../utils/images/about-page-header-img.jpg);
+    padding: 6rem 0;
+    
 }
 
 @media only screen and (max-width: 576px) {
