--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,5 +1,6 @@
 .contact-page header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../utils/images/contact-page-header-img.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.)), url(../../utils/images/contact-page-header-img.jpg);
+    padding: 6rem 0;
 }
 
 @media only screen and (max-width: 576px) {
