--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #fff;            /* white background */
+  background: #fff;       
 }
 
 .mySwiper2 .swiper-slide img {
